# URL-Crawler-Email-Scraper

./: README.md  pyproject.toml  simple_scraper.py
email_scraper/: scraped_emails.db
email_scraper/email_scraper/: items.py  pipelines.py  scraped_emails.db  settings.py
email_scraper/email_scraper/spiders/: email_spider.py  scrapy_selenium_scraper.py
