[tool.poetry]
name = "email_scraping"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Bolh <jbbolh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
bs4 = "^0.0.1"
requests = "^2.28.1"
Scrapy = "^2.6.1"
tld = "^0.12.6"
geocoder = "^1.38.1"
scrapy-selenium = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
